# checkpoint9

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml  start_lifecycle_node.launch.py  start_rviz_with_arguments.launch.py
attach_shelf/rviz/: launch_part.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
generic_manager/: CMakeLists.txt  package.xml
generic_manager/include/: cpp_helper.hpp  diff_drive_manager.hpp  laser_manager.hpp  laser_readings.hpp  leg_data.hpp  lifecycle_manager.hpp  odom_manager.hpp  point_2d.hpp  robo_math.hpp  ros2_service_manager.hpp  rpy.hpp  tf_manager.hpp  transform.hpp
generic_manager/src/: cpp_helper.cpp  diff_drive_manager.cpp  laser_manager.cpp  lifecycle_manager.cpp  odom_manager.cpp  robo_math.cpp  ros2_service_manager.cpp  tf_manager.cpp
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attach_client_component.hpp  attach_server_component.hpp  pre_approach_component.hpp
my_components/launch/: attach_to_shelf.launch.py
my_components/rviz/: launch_part.rviz
my_components/src/: attach_client_component.cpp  attach_server_component.cpp  pre_approach_and_server.cpp  pre_approach_component.cpp
my_components/srv/: GoToLoading.srv
